--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "followtheleader",
   "version": "0.1.0",
+  "homepage": "https://cs394-w19.github.io/followtheleader/",
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
